# docker-catchallapi

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE.md  README.md  config-prod.yml  pyproject.toml  requirements.txt  runserver.py  web.py
returnpath/: __init__.py  api_catchall.py  config_helper.py  log.py
