[tool.poetry]
name = "docker-catchallapi"
version = "0.1.0"
description = ""
authors = ["Trond Hindenes <trond@hindenes.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
flask = "^1.1.4"
flask-restful = "^0.3.9"
flask-cors = "^3.0.10"
requests = "^2.28.1"
pyyaml = "^6.0"
dpath = "^2.0.6"
cherrypy = "^18.8.0"
flask-restful-swagger = "^0.20.2"
markupsafe = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
